update readme for v2.0

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <script src="badges.js"></script>
   <script src='is-toki-pona.js'></script>
   <script src='comfy-chat.js'></script>
   <div id="chat">
